header: took out width 100vw fixed content push past border
blue section: evened out to 5 black 5 white

.hero p: bumped text size on desktop

Nav Bar: Deleted home to add logo as home, fixed positioning with the
new img

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 
 		<!-- == NAVIGATION == -->
 
-		<!-- <img src="img/conceptLogo2.png" id="logo"> -->
-
 		<div class="navbar">
 			<div id="btn-back"></div>
 			<div class="button" id="toggle">
@@ -37,7 +35,7 @@
 		<div class="overlay" id="overlay">
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
+					<li><a href="index.html"><img src="img/vanguardLogoNoText.png" id="logo"></a></li>
 					<li><a href="#">Agency</a></li>
 					<li><a href="#">Case Studies</a></li>
 					<li><a href="#">Our Blog</a></li>
