--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 		</div>
 	</section>
 
+<div id="cowboy">
 	<section class="cases">
 		<h2>Case Studies</h2>
 	</section>
@@ -119,7 +120,7 @@
 	<section class="hire">
 		<h2>Hire Us</h2>
 	</section>
-
+</div>
 	<script>
 		$('#toggle').click(function () {
 			$(this).toggleClass('active');
