--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+	<script src="js/main.js"></script>
 </head>
 
 <body>
@@ -106,7 +107,15 @@
 
 <div id="cowboy">
 	<section class="cases">
-		<h2>Case Studies</h2>
+		<h2 id="hidden">Case Studies</h2>
+		<div id="caseStudy" class="caseStudly">
+			<img src="img/aa.png" class="study" />
+			<img src="img/bdc.png" class="study" />
+			<img src="img/pdh1.png" class="study" />
+			<img src="img/pdh1.png" class="study" />
+			<img src="img/msn.png" class="study" />
+			<img src="img/cb.png" class="study" />
+		</div>
 	</section>
 
 	<section class="process">
