--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/foundation.min.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<script src="js/vendor/modernizr.js"></script>
@@ -109,12 +110,17 @@
 	<section class="cases">
 		<h2 id="hidden">Case Studies</h2>
 		<div id="caseStudy" class="caseStudly">
-			<img src="img/aa.png" class="study" />
-			<img src="img/bdc.png" class="study" />
-			<img src="img/pdh1.png" class="study" />
-			<img src="img/pdh1.png" class="study" />
-			<img src="img/msn.png" class="study" />
-			<img src="img/cb.png" class="study" />
+			<div id="affirmingAnimals">
+				<img src="img/aa.png" class="aa" />
+				<a class="workbuttons" href="#">Description</a>
+				<a class="workbuttons" href="">Description</a>
+			</div>
+			<img src="img/bdc.png" class="bdc" />
+			<img src="img/pdh1.png" class="pdh1" />
+			<img src="img/pdh2.png" class="pdh1" />
+			<img src="img/spaceroads.png" class="spaceroads" />
+			<img src="img/msn.png" class="msn" />
+			<img src="img/cb.png" class="cb" />
 		</div>
 	</section>
 
