--- a/index.html
+++ b/index.html
@@ -116,55 +116,64 @@
 	<div id="cowboy">
 		<section id="work" class="cases">
 			<h2 id="hidden">Case Studies</h2>
-			<div id="caseStudy" class="caseStudly">
+			<div id="caseStudy" class="hide">
 				<div class="showBtn">
 					<img src="img/aa.png" class="aa" />
-					<a class="descBtn" type="button" href="#">Go to Site</a>
+					<a class="descBtn" type="button" href="http://affirminganimals.com" target="_blank">Go to Site</a>
 					<a class="moreBtn" type="button" href="#">Description</a>
 				</div>
 				<div class="showBtn">
 					<img src="img/bdc.png" class="bdc" />
-					<a class="rightdescBtn" type="button" href="#">Go to Site</a>
+					<a class="rightdescBtn" type="button" href="https://barndoorcreative.ca" target="_blank">Go to Site</a>
 					<a class="rightmoreBtn" type="button" href="#">Description</a>
 				</div>
 				<div class="showBtn">
 					<img src="img/pdh1.png" class="pdh1" />
-					<a class="descmidBtn" type="button" href="#">Watch</a>
+					<a class="descmidBtn" type="button" href="https://youtu.be/XQbpDnpoKiA" target="_blank">Watch</a>
 					<a class="moremidBtn" type="button" href="#">Description</a>
 				</div>
 				<div class="showBtn">
 					<img src="img/pdh2.png" class="pdh1" />
-					<a class="descmidBtn" type="button" href="#">Watch</a>
+					<a class="descmidBtn" type="button" href="https://youtu.be/uyhEs-qST5Q" target="_blank">Watch</a>
 					<a class="moremidBtn" type="button" href="#">Description</a>
 				</div>
 				<div class="showBtn">
 					<img src="img/spaceroads.png" class="spaceroads" />
-					<a class="descmidBtn" type="button" href="#">Watch</a>
+					<a class="descmidBtn" type="button" href="#" target="_blank">Watch</a>
 					<a class="moremidBtn" type="button" href="#">Description</a>
 				</div>
 				<div class="showBtn">
 					<img src="img/msn.png" class="msn" />
-					<a class="descBtn" type="button" href="#">Go to Site</a>
+					<a class="descBtn" type="button" href="http://www.mutualsupport.net" target="_blank">Go to Site</a>
 					<a class="moreBtn" type="button" href="#">Description</a>
 				</div>
 				<div class="showBtn">
 					<img src="img/cb.png" class="cb" />
-					<a class="rightdescBtn" type="button" href="#">Go to Site</a>
+					<a class="rightdescBtn" type="button" href="http://jacobwillms.com/carbot/cartoons/#ov" target="_blank">Go to Site</a>
 					<a class="rightmoreBtn" type="button" href="#">Description</a>
 				</div>
 			</div>
 		</section>
 
-		<section class="process">
-			<h2>The Process</h2>
+		<section id="process" class="process">
+			<h2 id="hidden">The Process</h2>
+			<div id="start" class="hide">
+				
+			</div>
 		</section>
 
-		<section class="team">
-			<h2>The Team</h2>
+		<section id="team" class="team">
+			<h2 id="hidden">The Team</h2>
+			<div id="staff" class="hide">
+
+			</div>
 		</section>
 
-		<section class="hire">
-			<h2>Hire Us</h2>
+		<section id="hire" class="hire">
+			<h2 id="hidden">Hire Us</h2>
+			<div id="contact" class="hide">
+
+			</div>
 		</section>
 	</div>
 	<script>
