--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +7,22 @@
 	<title>Vanguard Digital Design</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/foundation.min.css">
-	<link rel="stylesheet" href="css/font-awesome.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
-	<script src="js/vendor/modernizr.js"></script>
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+	<!--Foundation-->
+		<link rel="stylesheet" href="css/foundation.css">
+		<link rel="stylesheet" href="css/foundation.min.css">
+		<!--Main Stylesheet-->
+		<link rel="stylesheet" href="css/main.css">
+	<!--Font Awesome Icons-->
+		<link rel="stylesheet" href="css/font-awesome.css">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
+	<!--JS modernizr-->
+		<script src="js/vendor/modernizr.js"></script>
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+	<!--Additional JS-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+		<script src="js/foundation.min.js"></script>
+		<script src="js/main.js"></script>
 </head>
 
 <body>
@@ -40,10 +46,10 @@
 					<li>
 						<a href="index.html"><img src="img/vanguardLogoNoText.png" id="logo"></a>
 					</li>
-					<li><a href="#">Agency</a></li>
-					<li><a href="#work">Case Studies</a></li>
+					<li id="t"><a href="#team">Agency</a></li>
+					<li id="w"><a href="#work">Case Studies</a></li>
 					<li><a href="#">Our Blog</a></li>
-					<li><a href="#">Contact</a></li>
+					<li id="h"><a href="#hire">Contact</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -117,62 +123,164 @@
 		<section id="work" class="cases">
 			<h2 id="hidden">Case Studies</h2>
 			<div id="caseStudy" class="hide">
-				<div class="showBtn">
-					<img src="img/aa.png" class="aa" />
-					<a class="descBtn" type="button" href="http://affirminganimals.com" target="_blank">Go to Site</a>
-					<a class="moreBtn" type="button" href="#">Description</a>
+				<div class="row">
+					<div class="small-12 medium-6 columns">
+						<h3>Affirming Animals</h3>
+							<div class="showBtn">
+								<img src="img/aa.png" class="csPad" />
+								<a class="descBtn" type="button" href="http://affirminganimals.com" target="_blank">Go to Site</a>
+								<a class="moreBtn" type="button" href="#">Description</a>
+							</div>
+					</div>
+
+					<div class="small-12 medium-6 columns">
+						<h3>Barn Door Creative</h3>
+						<div class="showBtn">
+							<img src="img/bdc.png" class="csPad" />
+							<a class="rightdescBtn" type="button" href="https://barndoorcreative.ca" target="_blank">Go to Site</a>
+							<a class="rightmoreBtn" type="button" href="#">Description</a>
+						</div>
+					</div>
 				</div>
+
+					<div class="row">
+						<div class="small-12 medium-4 columns">
+							<h3>PDH 1</h3>
 				<div class="showBtn">
-					<img src="img/bdc.png" class="bdc" />
-					<a class="rightdescBtn" type="button" href="https://barndoorcreative.ca" target="_blank">Go to Site</a>
-					<a class="rightmoreBtn" type="button" href="#">Description</a>
-				</div>
-				<div class="showBtn">
-					<img src="img/pdh1.png" class="pdh1" />
+					<img src="img/pdh1.png" class="csPad" />
 					<a class="descmidBtn" type="button" href="https://youtu.be/XQbpDnpoKiA" target="_blank">Watch</a>
 					<a class="moremidBtn" type="button" href="#">Description</a>
 				</div>
+			</div>
+			<div class="small-12 medium-4 columns">
+				<h3>PDH 2</h3>
 				<div class="showBtn">
-					<img src="img/pdh2.png" class="pdh1" />
+					<img src="img/pdh2.png" class="csPad" />
 					<a class="descmidBtn" type="button" href="https://youtu.be/uyhEs-qST5Q" target="_blank">Watch</a>
 					<a class="moremidBtn" type="button" href="#">Description</a>
 				</div>
+</div>
+				<div class="small-12 medium-4 columns">
+					<h3>SpaceRoads Dev Trailer</h3>
 				<div class="showBtn">
-					<img src="img/spaceroads.png" class="spaceroads" />
+					<img src="img/spaceroads.png" class="csPad" />
 					<a class="descmidBtn" type="button" href="#" target="_blank">Watch</a>
 					<a class="moremidBtn" type="button" href="#">Description</a>
 				</div>
+</div>
+			</div>
+
+			<div class="row">
+				<div class="small-12 medium-6 columns">
+					<h3>Mutual Support Niagara</h3>
 				<div class="showBtn">
-					<img src="img/msn.png" class="msn" />
+					<img src="img/msn.png" class="csPad" />
 					<a class="descBtn" type="button" href="http://www.mutualsupport.net" target="_blank">Go to Site</a>
 					<a class="moreBtn" type="button" href="#">Description</a>
 				</div>
+			</div>
+				<div class="small-12 medium-6 columns">
+					<h3>Carbot Animations</h3>
 				<div class="showBtn">
-					<img src="img/cb.png" class="cb" />
+					<img src="img/cb.png" class="csPad" />
 					<a class="rightdescBtn" type="button" href="http://jacobwillms.com/carbot/cartoons/#ov" target="_blank">Go to Site</a>
 					<a class="rightmoreBtn" type="button" href="#">Description</a>
 				</div>
 			</div>
+			</div>
+		</div>
 		</section>
 
 		<section id="process" class="process">
 			<h2 id="hidden">The Process</h2>
 			<div id="start" class="hide">
-				
+
 			</div>
 		</section>
 
 		<section id="team" class="team">
 			<h2 id="hidden">The Team</h2>
 			<div id="staff" class="hide">
-
+				<div class="row">
+					<div class="small-12 medium-6 columns">
+						<img src="img/charles.jpg" alt="Charles Rempel: CEO, Designer, Videographer" />
+					<div class="row">
+						<div class="small-12 columns">
+							<h4>Charles Rempel</h4>
+							<h5>//CEO //Designer //Videographer</h5>
+						<p>Things to know about me. Im a giant nerd, beer enthousiast, avid coffee drinker,
+							and most importantly Web Designer extraordinaire. Lets continue this conversation
+							in person.</p>
+						</div>
+					</div>
+						</div>
+				<!--Joe Wartman-->
+					<div class="small-12 medium-6 columns">
+						<img src="img/joe.jpg" alt="Joe Wartman: CEO, Lead Designer" />
+					<div class="row">
+						<div class="small-12 columns">
+							<h4 class="colRh4">Joe Wartman</h4>
+							<h5 class="colRh5">//CEO //Lead Designer</h5>
+						<p class="colRp">Having a background in engineering, environmental sciences and
+							new media web design, Joe is always sharpening his vision in the world of
+							tech and design.</p>
+						</div>
+					</div>
+						</div>
+				</div>
 			</div>
 		</section>
 
 		<section id="hire" class="hire">
 			<h2 id="hidden">Hire Us</h2>
 			<div id="contact" class="hide">
-
+				<div class="form">
+					<form>
+						<!--Company Name and Full Name-->
+					  <div class="row">
+					    <div class="medium-6 columns">
+					      <label>Company Name
+					        <input type="text" placeholder="If you dont have one yet no big, if you do put the name here.">
+					      </label>
+					    </div>
+					    <div class="medium-6 columns">
+					      <label>Your Full Name
+					        <input type="text" placeholder="This lets us know what awesome person to talk to.">
+					      </label>
+					    </div>
+					  </div>
+						<!--Email and Telephone-->
+						<div class="row">
+							<div class="medium-6 columns">
+								<label>Telephone
+									<input type="text" placeholder="So we can get in touch all personal like">
+								</label>
+							</div>
+							<div class="medium-6 columns">
+								<label>Email
+									<input type="text" placeholder="A little less person but still good.">
+								</label>
+							</div>
+						</div>
+						<!--message box-->
+						<div class="row">
+							<div class="small-12 columns">
+								<label>Message
+									<textarea type="text" placeholder="Tell us about your companys needs, wether it be a Website or some Social Media Managment, we can help you do it all"></textarea>
+								</label>
+							</div>
+						</div>
+						<!--Buttons-->
+						<div class="row">
+					    <div class="small-12 medium-6 columns">
+					      <button class="btncontact" type="submit">Email This Form</button>
+					    </div>
+							<div class="small-12 medium-6 columns">
+								<button class="btncontact" type="reset">Reset This Form</button>
+							</div>
+					  </div>
+					</form>
+				</div>
 			</div>
 		</section>
 	</div>
